@@ -10,6 +10,8 @@ import com.crowndine.model.*;
 import com.crowndine.repository.*;
 import com.crowndine.service.CalculationService;
 import com.crowndine.service.order.OrderService;
+import com.crowndine.service.reservation.ReservationAvailabilityService;
+import com.crowndine.service.reservation.ReservationTimePolicy;
 import com.crowndine.service.reservation.ReservationService;
 
 import lombok.RequiredArgsConstructor;
@@ -26,7 +28,8 @@ import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 import java.util.UUID;
 
 import static com.crowndine.service.impl.CalculationServiceImpl.DEPOSIT_RATE;
@@ -35,8 +38,6 @@ import static com.crowndine.service.impl.CalculationServiceImpl.DEPOSIT_RATE;
 @RequiredArgsConstructor
 @Slf4j(topic = "RESERVATION-SERVICE")
 public class ReservationServiceImpl implements ReservationService {
-    private static final LocalTime OPEN_TIME = LocalTime.of(9, 0);
-    private static final LocalTime CLOSE_TIME = LocalTime.of(22, 0);
     private static final long HOLD_TABLE_MINUTES = 10;
 
     private final ReservationRepository reservationRepository;
@@ -44,9 +45,13 @@ public class ReservationServiceImpl implements ReservationService {
     private final OrderDetailRepository orderDetailRepository;
     private final RestaurantTableRepository tableRepository;
     private final PaymentRepository paymentRepository;
+    private final OrderRepository orderRepository;
+    private final FeedbackRepository feedbackRepository;
 
     private final CalculationService calculationService;
     private final OrderService orderService;
+    private final ReservationTimePolicy reservationTimePolicy;
+    private final ReservationAvailabilityService reservationAvailabilityService;
 
     @Override
     public PageResponse<ReservationResponse> getAllReservations(LocalDate fromDate, LocalDate toDate, EReservationStatus status, int page, int size) {
@@ -76,10 +81,10 @@ public class ReservationServiceImpl implements ReservationService {
         resp.setStatus(r.getStatus());
         resp.setTableName(r.getTable() != null ? r.getTable().getName() : null);
 
-        if (r.getCustomer() != null) {
-            resp.setCustomerName(r.getCustomer().getFullName());
-            resp.setPhone(r.getCustomer().getPhone());
-            resp.setEmail(r.getCustomer().getEmail());
+        if (r.getUser() != null) {
+            resp.setCustomerName(r.getUser().getFullName());
+            resp.setPhone(r.getUser().getPhone());
+            resp.setEmail(r.getUser().getEmail());
         }
 
         if (r.getOrder() != null) {
@@ -124,14 +129,51 @@ public class ReservationServiceImpl implements ReservationService {
 
     @Override
     public PageResponse<ReservationHistoryResponse> getReservationHistory(String username, int page, int size) {
-        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Order.desc("date"), Sort.Order.desc("startTime"), Sort.Order.desc("createdAt")));
         User user = getUserByUserName(username);
 
-        Page<Reservation> reservationPage = reservationRepository.findByCustomer_Id(user.getId(), pageable);
+        // Fetch all reservations
+        List<Reservation> reservations = reservationRepository.findAllByUser_Id(user.getId());
+        List<ReservationHistoryResponse> resHistory = reservations.stream()
+                .map(this::toHistoryResponse)
+                .collect(Collectors.toList());
 
-        List<ReservationHistoryResponse> data = reservationPage.getContent().stream().map(this::toHistoryResponse).toList();
+        // Fetch all standalone orders (orders not linked to a reservation)
+        List<Order> standaloneOrders = orderRepository.findAllByUser_IdAndReservationIsNull(user.getId());
+        List<ReservationHistoryResponse> orderHistory = standaloneOrders.stream()
+                .map(this::fromStandaloneOrderToHistoryResponse)
+                .collect(Collectors.toList());
 
-        return PageResponse.<ReservationHistoryResponse>builder().page(reservationPage.getNumber() + 1).pageSize(reservationPage.getSize()).totalPages(reservationPage.getTotalPages()).totalItems(reservationPage.getTotalElements()).data(data).build();
+        // Merge both lists
+        List<ReservationHistoryResponse> allHistory = new ArrayList<>(resHistory);
+        allHistory.addAll(orderHistory);
+
+        // Sort by date (descending) and then startTime (descending)
+        allHistory.sort((a, b) -> {
+            int dateComp = b.getDate().compareTo(a.getDate());
+            if (dateComp != 0) return dateComp;
+
+            LocalTime timeA = a.getStartTime() != null ? a.getStartTime() : LocalTime.MIN;
+            LocalTime timeB = b.getStartTime() != null ? b.getStartTime() : LocalTime.MIN;
+            return timeB.compareTo(timeA);
+        });
+
+        // Manual pagination
+        int totalItems = allHistory.size();
+        int totalPages = (int) Math.ceil((double) totalItems / size);
+        int fromIndex = page * size;
+        int toIndex = Math.min(fromIndex + size, totalItems);
+
+        List<ReservationHistoryResponse> pagedData = (fromIndex < totalItems)
+                ? allHistory.subList(fromIndex, toIndex)
+                : Collections.emptyList();
+
+        return PageResponse.<ReservationHistoryResponse>builder()
+                .page(page + 1)
+                .pageSize(size)
+                .totalPages(totalPages)
+                .totalItems((long) totalItems)
+                .data(pagedData)
+                .build();
     }
 
     private ReservationHistoryResponse toHistoryResponse(Reservation r) {
@@ -149,8 +191,44 @@ public class ReservationServiceImpl implements ReservationService {
             resp.setOrderId(order.getId());
             resp.setOrderStatus(order.getStatus());
             resp.setFinalPrice(order.getFinalPrice());
+
+            List<OrderDetail> details = orderDetailRepository.findByOrder_Id(order.getId());
+            resp.setItems(details.stream().map(d -> toLineResponse(d, r.getUser().getId())).toList());
+
+            // Check if user has already given general feedback
+            resp.setHasGeneralFeedback(feedbackRepository.existsByUser_IdAndOrder_IdAndOrderDetailIsNull(r.getUser().getId(), order.getId()));
         }
 
+        return resp;
+    }
+
+    private ReservationHistoryResponse fromStandaloneOrderToHistoryResponse(Order order) {
+        ReservationHistoryResponse resp = new ReservationHistoryResponse();
+        resp.setReservationId(null); // No reservation linked
+        resp.setDate(order.getCreatedAt().toLocalDate());
+        resp.setStartTime(order.getCreatedAt().toLocalTime());
+        resp.setEndTime(order.getCreatedAt().toLocalTime().plusHours(1)); // Default duration for display
+        resp.setGuestNumber(0);
+
+        // Map order status to a placeholder reservation status for display purposes
+        if (order.getStatus() == com.crowndine.common.enums.EOrderStatus.COMPLETED) {
+            resp.setReservationStatus(EReservationStatus.COMPLETED);
+        } else if (order.getStatus() == com.crowndine.common.enums.EOrderStatus.CANCELLED) {
+            resp.setReservationStatus(EReservationStatus.CANCELLED);
+        } else {
+            resp.setReservationStatus(EReservationStatus.CONFIRMED);
+        }
+
+        resp.setTableName(order.getRestaurantTable() != null ? order.getRestaurantTable().getName() : "N/A");
+        resp.setOrderId(order.getId());
+        resp.setOrderStatus(order.getStatus());
+        resp.setFinalPrice(order.getFinalPrice());
+
+        List<OrderDetail> details = orderDetailRepository.findByOrder_Id(order.getId());
+        resp.setItems(details.stream().map(d -> toLineResponse(d, order.getUser().getId())).toList());
+
+        // Check if user has already given general feedback
+        resp.setHasGeneralFeedback(feedbackRepository.existsByUser_IdAndOrder_IdAndOrderDetailIsNull(order.getUser().getId(), order.getId()));
         return resp;
     }
 
@@ -160,26 +238,31 @@ public class ReservationServiceImpl implements ReservationService {
         Order order = reservation.getOrder();
         // Tự động tạo order trống nếu chưa có (khi khách không chọn món)
         if (order == null) {
-            if (reservation.getCustomer() == null) {
+            if (reservation.getUser() == null) {
                 throw new ResourceNotFoundException("Customer not found for reservation");
             }
-            order = orderService.createOrderForReservation(reservation, reservation.getCustomer());
+            order = orderService.createOrderForReservation(reservation, reservation.getUser());
             reservation.setOrder(order);
             reservationRepository.save(reservation);
         }
 
         // Use the unified mapping to ensure response contains:
-        // itemsTotal, tableDeposit (base_deposit * hours), depositAmount (20% items + tableDeposit), remainingAmount, and items.
-        return toOrderDetailPageResponse(order, reservation.getStartTime(), reservation.getEndTime());
+        // itemsTotal, tableDeposit, depositAmount (20% items + tableDeposit), remainingAmount, and items.
+        return toOrderDetailPageResponse(order);
     }
 
-    private OrderLineResponse toLineResponse(OrderDetail od) {
+    private OrderLineResponse toLineResponse(OrderDetail od, Long userId) {
         OrderLineResponse r = new OrderLineResponse();
         r.setOrderDetailId(od.getId());
+        r.setProductId(od.getCombo() != null ? od.getCombo().getId() : (od.getItem() != null ? od.getItem().getId() : null));
         r.setName(od.getProductName());
         r.setType(od.getCombo() != null ? "COMBO" : "ITEM");
         r.setQuantity(od.getQuantity());
         r.setTotalPrice(od.getTotalPrice());
+
+        if (userId != null) {
+            r.setHasFeedback(feedbackRepository.existsByUser_IdAndOrderDetail_Id(userId, od.getId()));
+        }
 
         if (od.getCombo() != null) {
             r.setUnitPrice(od.getCombo().getPrice());
@@ -193,9 +276,9 @@ public class ReservationServiceImpl implements ReservationService {
     @Override
     @Transactional(rollbackFor = Exception.class)
     public ReservationCreateResponse createReservation(String username, ReservationCreateRequest request) {
-        LocalDateTime startDateTime = LocalDateTime.of(request.getDate(), request.getStartTime());
-        LocalDateTime endDateTime = LocalDateTime.of(request.getDate(), request.getEndTime());
-        validateReservationTime(startDateTime, endDateTime);
+        LocalDateTime startDateTime = reservationTimePolicy.toStartDateTime(request.getDate(), request.getStartTime());
+        LocalDateTime endDateTime = reservationTimePolicy.calculatePlannedEndTime(startDateTime);
+        reservationTimePolicy.validateStartTime(startDateTime);
 
         User user = getUserByUserName(username);
 
@@ -208,33 +291,26 @@ public class ReservationServiceImpl implements ReservationService {
         if (table.getCapacity() != null && table.getCapacity() < request.getGuestNumber()) {
             throw new InvalidDataException("Số lượng khách vượt quá sức chứa của bàn");
         }
-
-        List<EReservationStatus> blockingStatuses = List.of(EReservationStatus.PENDING, EReservationStatus.CONFIRMED, EReservationStatus.CHECKED_IN);
-
-        LocalDateTime now = LocalDateTime.now();
-        List<Long> reservedIds = reservationRepository.findReservedTableIds(request.getDate(), request.getStartTime(), request.getEndTime(), blockingStatuses, now);
-
-        if (reservedIds.contains(table.getId())) {
-            throw new InvalidDataException("Bàn đã được đặt trong khung giờ này");
-        }
+        
+        reservationAvailabilityService.ensureTableAvailable(request.getDate(), request.getStartTime(), table.getId());
 
         Reservation reservation = new Reservation();
         reservation.setDate(request.getDate());
         reservation.setStartTime(request.getStartTime());
-        reservation.setEndTime(request.getEndTime());
+        reservation.setEndTime(endDateTime.toLocalTime());
+        reservation.setCheckedOutAt(null);
         reservation.setGuestNumber(request.getGuestNumber());
         reservation.setNote(request.getNote());
         reservation.setStatus(EReservationStatus.PENDING);
-        reservation.setExpiratedAt(now.plusMinutes(HOLD_TABLE_MINUTES));
-        reservation.setCustomer(user);
+        reservation.setExpiratedAt(LocalDateTime.now().plusMinutes(HOLD_TABLE_MINUTES));
+        reservation.setUser(user);
         reservation.setCode(UUID.randomUUID().toString());
         reservation.setTable(table);
 
         Reservation saved = reservationRepository.save(reservation);
         log.info("Reservation has been saved with id: {}", saved.getId());
 
-        // Tính tiền cọc theo giờ
-        BigDecimal tableDeposit = getTableDeposit(table, saved.getStartTime(), saved.getEndTime());
+        BigDecimal tableDeposit = getTableDeposit(table);
 
         ReservationCreateResponse response = new ReservationCreateResponse();
         response.setReservationId(saved.getId());
@@ -345,23 +421,8 @@ public class ReservationServiceImpl implements ReservationService {
     }
 
     private void validateReservationForUser(Reservation reservation, User user) {
-        if (!reservation.getCustomer().getId().equals(user.getId())) {
+        if (!reservation.getUser().getId().equals(user.getId())) {
             throw new InvalidDataException("Không có quyền thao tác đặt bàn này");
-        }
-    }
-
-    private void validateReservationTime(LocalDateTime startDateTime, LocalDateTime endDateTime) {
-
-        if (startDateTime.isBefore(LocalDateTime.now())) {
-            throw new InvalidDataException("Ngày giờ bắt đầu phải sau hiện tại");
-        }
-
-        if (!endDateTime.isAfter(startDateTime)) {
-            throw new InvalidDataException("Giờ kết thúc phải sau giờ bắt đầu");
-        }
-
-        if (startDateTime.toLocalTime().isBefore(OPEN_TIME) || endDateTime.toLocalTime().isAfter(CLOSE_TIME)) {
-            throw new InvalidDataException("Nhà hàng chỉ mở cửa từ 09:00 đến 22:00");
         }
     }
 
@@ -413,26 +474,12 @@ public class ReservationServiceImpl implements ReservationService {
             throw new InvalidDataException("Số lượng khách vượt quá sức chứa của bàn");
         }
 
-        // Kiểm tra xem bàn mới có bị đặt trong khung giờ này không
-        // Loại trừ reservation hiện tại khỏi danh sách reserved
-        List<EReservationStatus> blockingStatuses = List.of(EReservationStatus.PENDING, EReservationStatus.CONFIRMED, EReservationStatus.CHECKED_IN);
-        LocalDateTime now = LocalDateTime.now();
-        List<Long> reservedIds = reservationRepository.findReservedTableIds(
+        reservationAvailabilityService.ensureTableAvailable(
                 reservation.getDate(),
                 reservation.getStartTime(),
-                reservation.getEndTime(),
-                blockingStatuses,
-                now
+                newTable.getId(),
+                reservation.getId()
         );
-
-        // Loại trừ bàn hiện tại của reservation này (nếu có)
-        if (reservation.getTable() != null) {
-            reservedIds.remove(reservation.getTable().getId());
-        }
-
-        if (reservedIds.contains(newTable.getId())) {
-            throw new InvalidDataException("Bàn đã được đặt trong khung giờ này");
-        }
 
         // Cập nhật bàn cho reservation
         reservation.setTable(newTable);
@@ -457,40 +504,26 @@ public class ReservationServiceImpl implements ReservationService {
     }
 
     /**
-     * Tính tiền cọc bàn theo giờ
-     *
-     * @param table     Bàn
-     * @param startTime Thời gian bắt đầu
-     * @param endTime   Thời gian kết thúc
-     * @return Tiền cọc = baseDeposit * số giờ
+     * Lấy tiền cọc cố định của bàn.
      */
-    private BigDecimal getTableDeposit(RestaurantTable table, LocalTime startTime, LocalTime endTime) {
+    private BigDecimal getTableDeposit(RestaurantTable table) {
         if (table == null || table.getBaseDeposit() == null) {
             return BigDecimal.ZERO;
         }
 
-        if (startTime == null || endTime == null) {
-            return table.getBaseDeposit();
-        }
-
-        // Tính số giờ (có thể là số thập phân)
-        long minutes = java.time.Duration.between(startTime, endTime).toMinutes();
-        BigDecimal hours = BigDecimal.valueOf(minutes).divide(BigDecimal.valueOf(60), 2, RoundingMode.HALF_UP);
-
-        // Tiền cọc = baseDeposit * số giờ
-        return table.getBaseDeposit().multiply(hours).setScale(2, RoundingMode.HALF_UP);
+        return table.getBaseDeposit().setScale(2, RoundingMode.HALF_UP);
     }
 
-    private OrderDetailHistoryResponse toOrderDetailPageResponse(Order order, LocalTime startTime, LocalTime endTime) {
+    private OrderDetailHistoryResponse toOrderDetailPageResponse(Order order) {
         List<OrderDetail> orderDetails = orderDetailRepository.findByOrder_Id(order.getId());
         List<OrderLineResponse> data = orderDetails.stream()
-                .map(this::toLineResponse)
+                .map(od -> toLineResponse(od, order.getUser() != null ? order.getUser().getId() : null))
                 .toList();
 
         BigDecimal itemsTotal = orderDetails.stream()
                 .map(OrderDetail::getTotalPrice)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
-        BigDecimal tableDeposit = getTableDeposit(order.getRestaurantTable(), startTime, endTime);
+        BigDecimal tableDeposit = getTableDeposit(order.getRestaurantTable());
         BigDecimal depositAmount = calculationService.calculateDepositPayment(itemsTotal, tableDeposit);
         BigDecimal remainingAmount = itemsTotal.subtract(itemsTotal.multiply(DEPOSIT_RATE))
                 .setScale(2, RoundingMode.HALF_UP);
@@ -503,7 +536,7 @@ public class ReservationServiceImpl implements ReservationService {
         resp.setDiscountPrice(order.getDiscountPrice()); // tiền giảm giá
         resp.setFinalPrice(order.getFinalPrice()); // tổng tiền sau giảm giá
         resp.setItemsTotal(itemsTotal); // tổng tiền các món
-        resp.setTableDeposit(tableDeposit); // tiền cọc bàn (theo giờ)
+        resp.setTableDeposit(tableDeposit); // tiền cọc bàn cố định
         resp.setDepositAmount(depositAmount); // tiền cọc trước = 20% món + cọc bàn
         resp.setRemainingAmount(remainingAmount); // 80% còn lại trả sau
         resp.setCreatedAt(order.getCreatedAt());
